--- a/camsexton.com/public_html/styles/styles.css
+++ b/camsexton.com/public_html/styles/styles.css
@@ -3,7 +3,7 @@
  * Cam Sexton's
  * Artist/musician/band/venue website CSS
  *
- * Client: Lillian Albazi
+ * Client: Cam Sexton
  * Date: March 2018
  * 
  * Contents:
@@ -24,14 +24,10 @@
 	}
 
 body {
-	background-color: #000000;
-	background-image:url("./assets/lillian.jpg");
-	background-size: 50%;
-	background-repeat: no-repeat;
-	background-position: right 5% top 100px;
-	background-attachment: fixed;
-	font-size: 30px;
-	font-weight: 400;
+	background-color: #ff64ee;
+	font-family: 'Karla', sans-serif;
+	font-size: 25px;
+	font-weight: 600;
 	color: #ffffff;
 
 	}
@@ -53,35 +49,39 @@ hr {
 .cts-navbar {
 	position: fixed;
 	display: flex;
-	justify-content; flex-start;
+	justify-content: space-between;
 	flex-wrap: nowrap;
 	align-items: center;
 	overflow: hidden;
-	background: linear-gradient(#222222, #000000);
+	background: rgba(0,0,0,0.7);
 	width: 100%;
 	top: 0;
-	height: 100px;
+	height: 50px;
 	padding: 0px;
-	font-family: 'Mr Dafoe', cursive;
+	font-family: 'Karla', sans-serif;
+	text-transform: uppercase;
 	}
 
 .cts-navbar__main-list {
 	list-style-type: none;
-	float: left;
+	background-color: transparent;
 	overflow: hidden;
-	font-size: 120%;
-	display: inline-block;
-	height: 60px;
+	font-size: 75%;
+	line-height: 100%;
+	display: flex;
+	justify-content: flex-start;
+	flex-wrap: wrap;
+	align-items: center;
 	color: #ffffff;
 	text-decoration: none;
 }
 
 .cts-navbar__main-list li {
 	display: inline-block;
-	border-bottom: solid 3px transparent;
-	border-radius: 0;
+	border: solid 3px transparent;
+	border-radius: 3px;
+	padding: 5px;	
 	margin-right: 15px;
-	padding: 10px;
 	transition: border 500ms;
 }
 
@@ -89,10 +89,7 @@ hr {
 	display: none;
 }
 
-@media only screen and (max-width: 600px) {
-	.cts-navbar {
-		justify-content: center;
-	}
+@media only screen and (max-width: 800px) {
 	.cts-navbar__main-list {
 		display: none;
 	}
@@ -101,19 +98,12 @@ hr {
 		background-size: 100%;
 		
 	}
-	#cts-home-button {
-		display: block;
-		width: 100%;
-		text-align: right;
-		float: none;
-	}
 
 	#hamburger {
-		display: none;
-		position: fixed;
-		right: 5%;
-		top: 5%;
-		font-size: 150%;
+		display: inline-block;
+		text-align: center;
+		font-size: 100%;
+		line-height: 100%;
 	}
 }
 
@@ -123,45 +113,36 @@ hr {
 }
 
 .cts-navbar__main-list li:hover {
-	border-bottom: solid 3px #ffffff;
+	border: solid 3px #ffffff;
 	transition: border 250ms;
 }
 
 #cts-home-button {
 	display: inline-block;
-	height: 50px;
-	width: 350px;
-	white-space: nowrap;
 	background-color: transparent;
+	width: 200px;
+	white-space: nowrap;
 	text-decoration: none;
 	color: #ffffff;
-	float: left;
-	letter-spacing: 0.1em;
-	line-height: 75%;
-	margin: 15px;
-	font-family: 'Mr Dafoe', cursive;
-	font-size: 150%;
-	font-weight: 400;
+	letter-spacing: 0.05em;
+	line-height: 100%;
+	font-family: 'Karla', sans-serif;
+	font-size: 100%;
+	font-weight: 600;
 	text-align: center;
-	transform: rotate(-3deg);
 	transition: font-size 500ms;
+	border: solid 3px transparent;
 }
 
-#cts-home-button:hover {
-	font-size: 160%;
-	transition: font-size 500ms;
-}
-
+/*
 @media only screen and (max-width: 480px) {
 	.cts-navbar {
 		height: 70px;
 	}
 	#cts-home-button {
-		font-size: 110%;
+		font-size: 100%;
 	}
-	#cts-home-button:hover {
-	font-size: 110%;
-	}
+	
 	#hamburger {
 		font-size: 130%;
 	}
@@ -190,19 +171,18 @@ hr {
 
 
 }
-
+*/
 .cts-main-content {
-	width: 45%;
-	display: block;
-	margin-top: 220px;
-	margin-left: 5%;
-	margin-right: auto;
-	font-family: 'Libre Baskerville', serif;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	padding-top: 25%;
+	font-family: 'Raleway', sans-serif;
 	letter-spacing: 0.01em;
-	line-height: 150%;
-	font-size: 75%;
+	line-height: 100%;
+	font-size: 100%;
 }
-
+/*
 @media only screen and (max-width: 600px) {
 	body {
 		background-size: 100%;
@@ -215,7 +195,7 @@ hr {
 
 	}
 }
-
+*/
 /*
  * Section 3: Schedule list layout
  */
