--- a/camsexton.com/templates/about.html.twig
+++ b/camsexton.com/templates/about.html.twig
@@ -1,5 +1,24 @@
 {% extends './base.html.twig' %}
 
 {% block cts_main_content %}
-	This is my about page
+<div class="cts-page-title">
+	Who & What
+	</br>
+</div>
+<div class="cts-main-content_section">
+	Hello! I'm Cam. I live in Melbourne, Australia and bring a diverse range of skills to creative projects - helping artists and musicians to make cool stuff that doesn't break. </br></br>Here are some of the things I do:
+	</br></br>
+	<ul>
+		<li>web development (php, javascript, html, css, react)</li>
+		<li>designing new, software-based musical instruments (SuperCollider, Pd, Max)</li>
+		<li>mixing/audio production (electronic, jazz, pop)</li>
+		<li>drumming (jazz, pop, funk)</li>
+		<li>writing songs for myself and others</li>
+		<li>teaching all of the above</li>
+	</ul>
+
+	</br></br>
+	I built this website (you can view the code <a href="https://github.com/ctsexton/web-projects/tree/master/camsexton.com">here</a>) and I can make one for you too!
+</div>
+
 {% endblock %}
