--- a/camsexton.com/templates/base.html.twig
+++ b/camsexton.com/templates/base.html.twig
@@ -9,10 +9,10 @@
 	<body>
 		<header>
 			<div class="cts-navbar">
-				<a href="{{ home }}" id="cts-home-button">cam sexton</a>
+				<a href="{{ navlinks.home }}" id="cts-home-button">cam sexton</a>
 				<ul class="cts-navbar__main-list">
-					<li><a href="{{ about }}">about</a></li>
-					<li><a href="{{ schedule }}">schedule</a></li>
+					<li><a href="{{ navlinks.about }}">about</a></li>
+					<li><a href="{{ navlinks.schedule }}">schedule</a></li>
 					<li>work
 						<ul style="display: none">
 							<li>web</li>
@@ -22,7 +22,7 @@
 							<li>discography</li>
 						</ul>
 					</li>
-					<li><a href="{{ contact }}">contact</a></li>
+					<li><a href="{{ navlinks.contact }}">contact</a></li>
 				</ul>
 				<div id="hamburger">&#9776;</div>
 			</div>
