--- a/camsexton.com/templates/about.html.twig
+++ b/camsexton.com/templates/about.html.twig
@@ -6,13 +6,21 @@
 	</br>
 </div>
 <div class="cts-main-content_section">
-	Hello! I'm Cam. I live in Melbourne, Australia and bring a diverse range of skills to creative projects - helping artists and musicians to make cool stuff that doesn't break. </br></br>Here are some of the things I do:
+	<div>
+		<div style="display: inline-block">
+		<img src="./assets/cam_forest.jpg" style="border-radius: 10%; height: auto; vertical-align: top"/>
+		</div>
+		<div style="display: inline-block">
+		Hi! I'm Cam. I am a musician/programmer and I help artists to make cool stuff that doesn't break. </div>
+	</div>
+	<br>
+	Here are some of the things I do:
 	</br></br>
-	<ul>
+	<ul style="line-height: 150%; margin-left: 15%;">
 		<li>web development (php, javascript, html, css, react)</li>
 		<li>designing new, software-based musical instruments (SuperCollider, Pd, Max)</li>
-		<li>mixing/audio production (electronic, jazz, pop)</li>
-		<li>drumming (jazz, pop, funk)</li>
+		<li>recording/mixing/audio production</li>
+		<li>drumming</li>
 		<li>writing songs for myself and others</li>
 		<li>teaching all of the above</li>
 	</ul>
