--- a/camsexton.com/templates/home.html.twig
+++ b/camsexton.com/templates/home.html.twig
@@ -1,5 +1,5 @@
 {% extends "./base.html.twig" %}
 
 {% block cts_main_content %}
-	Hi, what's up?
+	written correspondance: cam at cam sexton dot com
 {% endblock %}
