--- a/camsexton.com/templates/contact.html.twig
+++ b/camsexton.com/templates/contact.html.twig
@@ -4,15 +4,13 @@
 	<div class="cts-page-title">
 		Complaints
 	</div>
-	<div class="cts-main-content_section">
-		<form>
+	<form class="contact-form">
 			Your Name:<br>
-			<input type="text" name="name" size="40" autofocus><br>
+			<input type="text" name="name"><br>
 			Email:<br>
 			<input type="text" name="email" size="40"><br>
 			Message:<br>
 			<textarea name="message" cols="50" rows="10"></textarea><br>
 			<button type="submit">Submit</button>
-		</form>
-	</div>
+	</form>
 {% endblock %}
