--- a/camsexton.com/templates/about.html.twig
+++ b/camsexton.com/templates/about.html.twig
@@ -11,11 +11,10 @@
 		<img src="./assets/cam_forest.jpg" style="border-radius: 10%; height: auto; vertical-align: top"/>
 		</div>
 		<div style="display: inline-block">
-		Hi! I'm Cam. I am a musician/programmer and I help artists to make cool stuff that doesn't break. </div>
+		Hi! I'm Cam - a musician & programmer from Melbourne, Australia. I help artists to make cool stuff that doesn't break. </div>
 	</div>
-	<br>
 	Here are some of the things I do:
-	</br></br>
+	<br>
 	<ul style="line-height: 150%; margin-left: 15%;">
 		<li>web development (php, javascript, html, css, react)</li>
 		<li>designing new, software-based musical instruments (SuperCollider, Pd, Max)</li>
@@ -24,8 +23,6 @@
 		<li>writing songs for myself and others</li>
 		<li>teaching all of the above</li>
 	</ul>
-
-	</br></br>
 	I built this website (you can view the code <a href="https://github.com/ctsexton/web-projects/tree/master/camsexton.com">here</a>) and I can make one for you too!
 </div>
 
