--- a/camsexton.com/templates/base.html.twig
+++ b/camsexton.com/templates/base.html.twig
@@ -18,7 +18,8 @@
 						<ul class="dropdown-content">
 							<li><a href="{{ navlinks.web }}">web</a></li>
 							<li><a href="{{ navlinks.instruments }}">instruments</a></li>
-							<li><a href="{{ navlinks.teaching }}" target="blank">teaching</a></li>
+							<li><a href="{{ navlinks.music }}">music</a></li>
+							<li><a href="{{ navlinks.github }}">github</a></li>
 							<li><a href="{{ navlinks.disco }}">discography</a></li>
 						</ul>
 						</div></li>
@@ -30,5 +31,7 @@
 			{% block cts_main_content %}
 			{% endblock %}
 		</div>
+		<footer class="cts-footer">
+		</footer>
 	</body>
 </html>
