--- a/camsexton.com/templates/web.html.twig
+++ b/camsexton.com/templates/web.html.twig
@@ -1,13 +1,38 @@
 {% extends "./base.html.twig" %}
 
 {% block cts_main_content %}
-	I create websites. Here are some examples of sites I've made for Australian artists. 
+	<div class="cts-page-title">
+		Simple Websites for Busy Artists
+	</div>
+	<div class="cts-main-content_section">
+	<div style="text-align: center">
+	Musicians, artists, performers... we all know we need a website. 
 	<br>
-	All my ARTIST sites are quick to build, competitively priced and include the schedule feature.
+	Just a simple one is fine, right?
 	<br>
-	The SCHEDULE feature:
+	All you need is a bio, some examples of your work, contact details... and your upcoming schedule.
+	</div>
 	<br>
-	Easily update YOUR WEBSITE gig list or public schedule by simply entering an event into a google calendar.
+	For a long time, maintaining the gig list on my band's website was constantly frustrating. I neglected logging into the admin area frequently enough to keep it current - and inevitably it was always out of date. I've seen so many other websites too with events listed that were months, even years old!
 	<br>
-	NO messing with code or logging into confusing, bulky website-managers. You can even do it from YOUR PHONE using Google Calendar.
+	<div style="text-align: center; font-size: 200%; line-height: 200%;">
+	Cam Sexton's Artist Websites solve this problem.
+	</div>
+	<h3><i>The Killer Feature:</i></h3>
+	The schedule page (like the one on this site) syncs with a Google Calendar, making it quick and easy to update from your laptop or phone in the same calendar app you probably already use to stay organised. So when you confirm an event and put it in your calendar, your website <i>automagically</i> updates with the details. And once an event has passed, it is instantly removed. A typical entry includes:
+	<ul style="margin-left: 10%">
+		<li>Gig Title</li>
+		<li>Venue (links to Google Maps)</li>
+		<li>Time/Date</li>
+		<li>Optional link to purchase tickets</li>
+		<li>Optional description with further details</li>
+	</ul>
+	Here's a video demonstrating how easy it is to use:
+	<br>
+	<br>
+	NO poking around a confusing, cluttered website manager - you can even do it from YOUR PHONE. For updating other parts of your site (bio, work, discography, etc.) you will use <a href="https://octobercms.com/">OctoberCMS</a> - a modern and flexible content management system with a great philosophy of keeping things <a href="https://octobercms.com/about">simple</a>.
+	<br>
+	<br>
+	<h3 style="text-align: center"><a href="{{ navlinks.contact }}">Contact Me</a> for a quote to build your easy to maintain website!</h3>
+	</div>
 {% endblock %}
