--- a/camsexton.com/templates/base_wide.html.twig
+++ b/camsexton.com/templates/base_wide.html.twig
@@ -26,8 +26,8 @@
 				</ul>
 			</div>
 		</header>
-		<div class="cts-main-content">
-			{% block cts_main_content %}
+		<div class="cts-main-content_wide">
+			{% block cts_main_content_wide %}
 			{% endblock %}
 		</div>
 		<footer class="cts-footer">
