--- a/camsexton.com/templates/web.html.twig
+++ b/camsexton.com/templates/web.html.twig
@@ -30,7 +30,7 @@
 	Here's a video demonstrating how easy it is to use:
 	<br>
 	<br>
-	NO poking around a confusing, cluttered website manager - you can even do it from YOUR PHONE. For updating other parts of your site (bio, work, discography, etc.) you will use <a href="https://octobercms.com/">OctoberCMS</a> - a modern and flexible content management system with a great philosophy of keeping things <a href="https://octobercms.com/about">simple</a>.
+	NO poking around a confusing, cluttered website manager - you can even do it from YOUR PHONE. For updating other parts of your site (bio, work, discography, etc.) you will use <a href="https://octobercms.com/">OctoberCMS</a>, a modern and flexible content management system with a great philosophy of keeping things <a href="https://octobercms.com/about">simple</a>.
 	<br>
 	<br>
 	<h3 style="text-align: center"><a href="{{ navlinks.contact }}">Contact Me</a> for a quote to build your easy to maintain website!</h3>
