--- a/camsexton.com/public_html/styles/styles.css
+++ b/camsexton.com/public_html/styles/styles.css
@@ -24,7 +24,8 @@
 	}
 
 body {
-	background-color: #ff64ee;
+	/* background-color: #ff64ee; */
+	background-color: #7799dd;
 	font-family: 'Karla', sans-serif;
 	font-size: 25px;
 	font-weight: 600;
@@ -130,11 +131,14 @@ form {
 .dropdown-content li {
 	padding: 0px;
 	border: none;
+	min-width: 160px;
+	display: flex;
+	align-items: center;
 }
 
 .dropdown-content a {
 	padding: 15px;
-	min-width: 160px;
+	width: 100%;
 	border: none;
 }
 
@@ -180,6 +184,17 @@ form {
 	line-height: 150%;
 }
 
+.cts-main-content_wide {
+	width: 80%;
+	display: flex;
+	flex-direction: column;
+	margin-left: 10%;
+	padding-top: 100px;
+	font-family: 'Raleway', sans-serif;
+	letter-spacing: 0.01em;
+	line-height: 150%;
+}
+
 .cts-page-title {
 	text-align: center;
 	font-family: 'Raleway', sans-serif;
@@ -210,7 +225,7 @@ form {
 
 #php-schedule li {
 	text-align: left;
-	background-color: #222;
+	background-color: #220055;
 	margin-top: 3%;
 	line-height: 150%;
 	padding: 20px;
