--- a/camsexton.com/templates/about.html.twig
+++ b/camsexton.com/templates/about.html.twig
@@ -6,14 +6,15 @@
 	</br>
 </div>
 <div class="cts-main-content_section">
-	<div>
-		<div style="display: inline-block">
-		<img src="./assets/cam_forest.jpg" style="border-radius: 10%; height: auto; vertical-align: top"/>
+	<div style="display: flex; align-items: center">
+		<img src="./assets/cam_forest.jpg" style=""/>
+		<div style="padding: 15px">
+			<h1>Hi! I'm Cam.</h1><br><h2>A musician & programmer from Melbourne, Australia.</h2> 
 		</div>
-		<div style="display: inline-block">
-		Hi! I'm Cam - a musician & programmer from Melbourne, Australia. I help artists to make cool stuff that doesn't break. </div>
 	</div>
-	Here are some of the things I do:
+	<br>
+	<h2 style="text-align: right">I help artists to make cool stuff that doesn't break.</h2><br>
+	<h2>Here are some of the things I do:</h2>
 	<br>
 	<ul style="line-height: 150%; margin-left: 15%;">
 		<li>web development (php, javascript, html, css, react)</li>
@@ -21,8 +22,8 @@
 		<li>recording/mixing/audio production</li>
 		<li>drumming</li>
 		<li>writing songs for myself and others</li>
-		<li>teaching all of the above</li>
 	</ul>
+	<br>
 	I built this website (you can view the code <a href="https://github.com/ctsexton/web-projects/tree/master/camsexton.com">here</a>) and I can make one for you too!
 </div>
 
