--- a/camsexton.com/templates/contact.html.twig
+++ b/camsexton.com/templates/contact.html.twig
@@ -6,9 +6,9 @@
 	</div>
 	<form class="contact-form" method="post" action="{{ navlinks.submit }}">
 			Your Name:<br>
-			<input type="text" name="name"><br>
+			<input type="text" name="name" style="width: 50%"><br>
 			Email:<br>
-			<input type="text" name="email" size="40"><br>
+			<input type="text" name="email" size="40" style="width: 50%"><br>
 			Message:<br>
 			<textarea name="message" cols="50" rows="10"></textarea><br>
 			<button name="submit" type="submit">Submit</button>
