--- a/camsexton.com/templates/home.html.twig
+++ b/camsexton.com/templates/home.html.twig
@@ -1,5 +1,5 @@
 {% extends "./base.html.twig" %}
 
 {% block cts_main_content %}
-	written correspondance: cam at cam sexton dot com
+	<img src="./assets/profile_glitch.svg" width="90%" style="display: block; margin: auto"/>
 {% endblock %}
