build contact form component

--- a/themes/artistsite/layouts/base-background.htm
+++ b/themes/artistsite/layouts/base-background.htm
@@ -11,6 +11,7 @@ function onStart() {
     'blog'=>'/writing',
     'github'=>'https://github.com/ctsexton',
     'contact'=>'/contact',
+	'submit'=>'/submit',
     );
 }
 ?>
