--- a/themes/artistsite/layouts/base.htm
+++ b/themes/artistsite/layouts/base.htm
@@ -11,6 +11,7 @@ function onStart() {
     'blog'=>'/writing',
     'github'=>'https://github.com/ctsexton',
     'contact'=>'/contact',
+	'submit'=>'/submit',
     );
 }
 ?>
@@ -28,13 +29,12 @@ function onStart() {
         <footer>
         <script src="{{ [
                 '@jquery',
-                '@framework',
-                '@framework.extras',
                 'assets/javascript/app.js'
             ]|theme }}">
         </script>
         {% scripts %}
         {% styles %}
+		{% framework extras %}
         </footer>
     </body>
 </html>
