convert schedule page to EventList component plugin

--- a/plugins/camsexton/contact/components/contactform/default.htm
+++ b/plugins/camsexton/contact/components/contactform/default.htm
@@ -1,5 +1,5 @@
 <form method="POST" class="contact-form" data-request="onSend" data-request-validate>
-	<div id="successmsg">
+	<div id="formContent">
 		<div id="contact-inputs">
 			Your Name:<br>
 			<input type="text" name="name" autofocus>
