--- a/themes/artistsite/partials/top-menu.htm
+++ b/themes/artistsite/partials/top-menu.htm
@@ -9,7 +9,7 @@
                 <li><a href="{{ navlinks.artistsites }}">artist sites</a></li>
 				<!-- <li><a href="{{ navlinks.instruments }}">instruments</a></li>-->
                 <li><a href="{{ navlinks.music }}">music</a></li>
-                <li><a href="{{ navlinks.blog }}">writing</a></li>
+				<!--<li><a href="{{ navlinks.blog }}">writing</a></li>-->
                 <li><a href="{{ navlinks.github }}">github</a><img src="/storage/app/media/github_small.svg" height="25px" style="padding-right: 15px" /></li>
             </ul>
         </li>
