--- a/themes/artistsite/partials/divider.htm
+++ b/themes/artistsite/partials/divider.htm
@@ -1,4 +1,4 @@
 ==
 <div style="display:flex;justify-content:center;align-items:center">
-	<span style="height:1px;background:#6d6d6d;width:75%;"></span>
+	<span style="height:1px;background:#bbbbbb;width:75%;"></span>
 </div>
